# JM_Downloader

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
jm_downloader/: auth.py  comicinfo.py  config.py  jm_service.py  main.py  models.py  storage.py  subscriptions.py  tasks.py  utils.py
jm_downloader/static/: app.css  app.js
jm_downloader/templates/: album.html  base.html  index.html  login.html  settings.html  tasks.html
tests/: test_comicinfo.py  test_jm_service.py  test_storage.py  test_subscriptions.py  test_tasks.py  test_utils.py
