[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jm-downloader"
version = "0.1.0"
description = "Internal JMComic downloader web UI with Komga-friendly ComicInfo.xml CBZ output."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "jmcomic>=2.6.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["jm_downloader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
